--- a/AI_Lab_practical_3.ipynb
+++ b/AI_Lab_practical_3.ipynb
@@ -53,7 +53,7 @@
         "id": "OnPFfpsKjIV8"
       },
       "source": [
-        "###1. Write a Python program to insert items into a list in sorted order.[link text](https://)"
+        "###1. Write a Python program to insert items into a list in sorted order."
       ]
     },
     {
